--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     
 
     <!-- Method Overview -->
-    <div class="white_section_nerf  w-container">
+    <!-- <div class="white_section_nerf  w-container">
         <h2 class="grey-heading_nerf">Method Overview</h2>
         <div class="grid-container-1">
             <img src="assets/images/overview_pipelines-1.png">
@@ -267,7 +267,7 @@
     while retaining their generalizability to obtain high-fidelity and highly varied 3D content.
             </p>
         </div>
-    </div>
+    </div> -->
 
     <!-- BibTeX -->
     <div class="white_section_nerf grey_container w-container">
