--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- Exported Meshes -->
     <div class="white_section_nerf  w-container">
         <h2 class="grey-heading_nerf">Exported Meshes</h2>
-        <div class="grid-container-4">
+        <div class="grid-container-2">
             <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
                 <model-viewer src="assets/meshes/2.glb" poster="assets/meshes/astronaut.jpg" 
@@ -216,7 +216,7 @@
                     camera-controls touch-action="pan-y">
                 </model-viewer>
             </div>
-            <div>
+            <!-- <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
                 <model-viewer src="assets/meshes/astronaut.glb" poster="assets/meshes/astronaut.jpg" 
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
@@ -243,7 +243,7 @@
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
                     camera-controls touch-action="pan-y">
                 </model-viewer>
-            </div>
+            </div> -->
         </div>
         <!-- Todo more res -->
         <div class="grid-container-1">
