--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
             <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
-                <model-viewer src="assets/meshes/astronaut.glb" poster="assets/meshes/astronaut.jpg" 
+                <model-viewer src="assets/meshes/dragon.glb" poster="assets/meshes/astronaut.jpg" 
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
                     camera-controls touch-action="pan-y">
                 </model-viewer>
