--- a/index.html
+++ b/index.html
@@ -196,21 +196,21 @@
                 </model-viewer>
             </div>
             <div>
-                <p class="myprompt nerf_text">An astronaut riding a horse</p>
+                <p class="myprompt nerf_text">A delicious creamy lemon cake</p>
                 <model-viewer src="assets/meshes/cake.glb" poster="assets/meshes/astronaut.jpg" 
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
                     camera-controls touch-action="pan-y">
                 </model-viewer>
             </div>
             <div>
-                <p class="myprompt nerf_text">An astronaut riding a horse</p>
+                <p class="myprompt nerf_text">Wes Anderson style Red Panda, reading a book,super cute, highly detailed and colored</p>
                 <model-viewer src="assets/meshes/panda.glb" poster="assets/meshes/astronaut.jpg" 
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
                     camera-controls touch-action="pan-y">
                 </model-viewer>
             </div>
             <div>
-                <p class="myprompt nerf_text">An astronaut riding a horse</p>
+                <p class="myprompt nerf_text">A high quality photo of a dragon</p>
                 <model-viewer src="assets/meshes/dragon.glb" poster="assets/meshes/astronaut.jpg" 
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
                     camera-controls touch-action="pan-y">
