--- a/index.html
+++ b/index.html
@@ -54,20 +54,19 @@
                             class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp;
                     <!-- <a href="https://mabaorui.github.io/" target="_blank" class="nerf_authors_v2">HaoGe Deng<span
                             class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp; -->
-                    <a href="https://mabaorui.github.io//" target="_blank" class="nerf_authors_v2">Junsheng Zhou<span
-                            class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp;
-                    <a href="https://mabaorui.github.io/" target="_blank" class="nerf_authors_v2">YuShen Liu<span
-                            class="text-span_nerf"></span></a><sup> 1</sup>
-                    <a href="https://mabaorui.github.io/" target="_blank" class="nerf_authors_v2">Tiejun Huang<span
-                        class="text-span_nerf"></span></a><sup> 1</sup>
-                    <a href="https://mabaorui.github.io/" target="_blank" class="nerf_authors_v2">Xinlong Wang<span
+                    <a href="https://junshengzhou.github.io/" target="_blank" class="nerf_authors_v2">Junsheng Zhou<span
+                            class="text-span_nerf"></span></a><sup>2,1</sup>,&nbsp;&nbsp;
+                    <a href="https://yushen-liu.github.io/" target="_blank" class="nerf_authors_v2">YuShen Liu<span
+                            class="text-span_nerf"></span></a><sup> 2</sup>
+                    <a href="https://scholar.google.com/citations?user=knvEK4AAAAAJ&hl=en/" target="_blank" class="nerf_authors_v2">Tiejun Huang<span
+                        class="text-span_nerf"></span></a><sup>1,3</sup>
+                    <a href="https://www.xloong.wang/" target="_blank" class="nerf_authors_v2">Xinlong Wang<span
                         class="text-span_nerf"></span></a><sup> 1</sup>
                 </div>
                 <div>
-                    <h1 class="nerf_affiliation_v2"><sup>1 </sup>HKUST</h1>,
-                    <h1 class="nerf_affiliation_v2"><sup>2 </sup>Light Illusions</h1>,
-                    <h1 class="nerf_affiliation_v2"><sup>3 </sup>South China University of Technology</h1>,
-                    <h1 class="nerf_affiliation_v2"><sup>4 </sup>Tencent AI Lab</h1>
+                    <h1 class="nerf_affiliation_v2"><sup>1 </sup>Beijing Academy of Artificial Intelligence</h1>,
+                    <h1 class="nerf_affiliation_v2"><sup>2 </sup>Tsinghua University</h1>,
+                    <h1 class="nerf_affiliation_v2"><sup>3 </sup>Peking University</h1>
                 </div>
 
                 <div class="external-link">
@@ -107,7 +106,7 @@
                 3D-aware capability of 2D diffusion priors, which in turn provides superior guidance for 
                 the refinement of 3D geometric priors. Our numerical and visual comparisons demonstrate 
                 that GeoDream generates more 3D consistent textured meshes with high-resolution realistic 
-                renderings (i.e., 1024 $\times$ 1024) and adheres more closely to semantic coherence.
+                renderings (i.e., 1024 &times 1024) and adheres more closely to semantic coherence.
                 <br>
                 <!-- <img  src="assets/images/overview.png"> -->
             </p>
