--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 3D geometric priors further. We justify that the refined 3D geometric priors aid in the 
                 3D-aware capability of 2D diffusion priors, which in turn provides superior guidance for 
                 the refinement of 3D geometric priors. Our numerical and visual comparisons demonstrate 
-                that GeoDream generates more 3D consistent textured meshes with high-resolution realistic 
-                renderings (i.e., 1024 &times 1024) and adheres more closely to semantic coherence.
+                that GeoDream generates more 3D consistent <b style="color: rgb(255, 0, 0);">textured meshes</b> with high-resolution realistic 
+                renderings (i.e., <b style="color: rgb(255, 0, 0);">1024 &times 1024</b>) and adheres more closely to semantic coherence.
                 <br>
                 <!-- <img  src="assets/images/overview.png"> -->
             </p>
@@ -126,7 +126,7 @@
     <!-- DMTet-based Generated Results -->
     <div class="white_section_nerf  w-container">
         <h2 class="grey-heading_nerf">DMTet-based Generated Results</h2>
-        <div class="grid-container-4">
+        <div class="grid-container-3">
             <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
                 <video class="video" id="1" loop playsinline autoPlay muted
@@ -145,12 +145,12 @@
                 src="assets/videos/DMTet_low/16_A_delicious_creamy_lemon_cake.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="2_merge"></canvas>
             </div>
-            <div>
+            <!-- <div>
                 <p class="myprompt nerf_text">A dinosaur toy</p>
                 <video class="video" id="0" loop playsinline autoPlay muted
                 src="assets/videos/DMTet_low/2_A_dinosaur_toy.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="0_merge"></canvas>
-            </div>
+            </div> -->
             <div>
                 <p class="myprompt nerf_text">A kangaroo wearing boxing gloves</p>
                 <video class="video" id="5" loop playsinline autoPlay muted
@@ -158,21 +158,21 @@
                 <canvas class="videoMerge" id="5_merge"></canvas>
             </div>
             <div>
-                <p class="myprompt nerf_text">3D render of an astronaut</p>
+                <p class="myprompt nerf_text">A flamingo standing on one leg</p>
                 <video class="video" id="7" loop playsinline autoPlay muted
-                src="assets/videos/DMTet_low/6_3D_render_of_a_statue_of_an_astronaut.mp4" onplay="resizeAndPlay(this)"></video>
+                src="assets/videos/21_A_flamingo_standing_on_one_leg_in_shallow_water.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="7_merge"></canvas>
             </div>
-            <div>
+            <!-- <div>
                 <p class="myprompt nerf_text">A 3D modeling of a lion</p>
                 <video class="video" id="6" loop playsinline autoPlay muted
                 src="assets/videos/DMTet_low/8_A_3D_modeling_of_a_lion.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="6_merge"></canvas>
-            </div>
+            </div> -->
             <div>
-                <p class="myprompt nerf_text">A bald eagle carved out of wood</p>
+                <p class="myprompt nerf_text">A colorful toucan with a large beak</p>
                 <video class="video" id="4" loop playsinline autoPlay muted
-                src="assets/videos/DMTet_low/10_A_bald_eagle_carved_out_of_wood.mp4" onplay="resizeAndPlay(this)"></video>
+                src="assets/videos/13_A_colorful_toucan_with_a_large_beak.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="4_merge"></canvas>
             </div>
         </div>
