--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp; -->
                     <a href="https://junshengzhou.github.io/" target="_blank" class="nerf_authors_v2">Junsheng Zhou<span
                             class="text-span_nerf"></span></a><sup>2,1</sup>,&nbsp;&nbsp;
-                    <a href="https://yushen-liu.github.io/" target="_blank" class="nerf_authors_v2">YuShen Liu<span
+                    <a href="https://yushen-liu.github.io/" target="_blank" class="nerf_authors_v2">Yu-Shen Liu<span
                             class="text-span_nerf"></span></a><sup> 2</sup>
                     <a href="https://scholar.google.com/citations?user=knvEK4AAAAAJ&hl=en/" target="_blank" class="nerf_authors_v2">Tiejun Huang<span
                         class="text-span_nerf"></span></a><sup>1,3</sup>
@@ -125,7 +125,7 @@
 
     <!-- DMTet-based Generated Results -->
     <div class="white_section_nerf  w-container">
-        <h2 class="grey-heading_nerf">DMTet-based Generated Results</h2>
+        <h2 class="grey-heading_nerf">Rendered Images from Generated Results</h2>
         <div class="grid-container-3">
             <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
@@ -185,7 +185,7 @@
 
     <!-- Exported Meshes -->
     <div class="white_section_nerf  w-container">
-        <h2 class="grey-heading_nerf">Exported Meshes</h2>
+        <h2 class="grey-heading_nerf">Exported Textured Meshes</h2>
         <div class="grid-container-2">
             <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
@@ -272,11 +272,11 @@
     <div class="white_section_nerf grey_container w-container">
     <h2 class="grey-heading_nerf">BibTeX</h2>
     <div class="bibtex">
-        <pre><code>@article{sweetdreamer,
-    author    = {Weiyu Li and Rui Chen and Xuelin Chen and Ping Tan},
-    title     = {GeoDream: Disentangling 2D and Geometric Priors for High-Fidelity and Consistent 3D Generation},
-    journal   = {arxiv:2310.02596},
-    year      = {2023},
+        <pre><code>@inproceedings{Ma2023GeoDream,
+    title = {GeoDream: Disentangling 2D and Geometric Priors for High-Fidelity and Consistent 3D Generation},
+    author = {Baorui Ma and Junsheng Zhou and Yu-Shen Liu and Tiejun Huang and Xinlong Wang},
+    journal={arXiv preprint arXiv:2310.06773},
+    year={2023}
     }</code></pre>
     </div>
 </div>
