--- a/index.html
+++ b/index.html
@@ -51,22 +51,26 @@
             <div class="nerf_subheader_v2">
                 <div>
                     <a href="https://mabaorui.github.io/" target="_blank" class="nerf_authors_v2">Baorui Ma<span
-                            class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp;
-                    <!-- <a href="https://mabaorui.github.io/" target="_blank" class="nerf_authors_v2">HaoGe Deng<span
-                            class="text-span_nerf"></span></a><sup> 1</sup>,&nbsp;&nbsp; -->
+                            class="text-span_nerf"></span></a><sup> 1*</sup>,&nbsp;&nbsp;
+                    <a href="https://github.com/Bitterdhg/" target="_blank" class="nerf_authors_v2">Haoge Deng<span
+                        class="text-span_nerf"></span></a><sup>2,1*</sup>,&nbsp;&nbsp;
                     <a href="https://junshengzhou.github.io/" target="_blank" class="nerf_authors_v2">Junsheng Zhou<span
-                            class="text-span_nerf"></span></a><sup>2,1</sup>,&nbsp;&nbsp;
+                            class="text-span_nerf"></span></a><sup>3,1</sup>,&nbsp;&nbsp;
                     <a href="https://yushen-liu.github.io/" target="_blank" class="nerf_authors_v2">Yu-Shen Liu<span
-                            class="text-span_nerf"></span></a><sup> 2</sup>
+                            class="text-span_nerf"></span></a><sup> 3</sup>
                     <a href="https://scholar.google.com/citations?user=knvEK4AAAAAJ&hl=en/" target="_blank" class="nerf_authors_v2">Tiejun Huang<span
-                        class="text-span_nerf"></span></a><sup>1,3</sup>
+                        class="text-span_nerf"></span></a><sup>1,4</sup>
                     <a href="https://www.xloong.wang/" target="_blank" class="nerf_authors_v2">Xinlong Wang<span
                         class="text-span_nerf"></span></a><sup> 1</sup>
                 </div>
                 <div>
                     <h1 class="nerf_affiliation_v2"><sup>1 </sup>Beijing Academy of Artificial Intelligence</h1>,
-                    <h1 class="nerf_affiliation_v2"><sup>2 </sup>Tsinghua University</h1>,
-                    <h1 class="nerf_affiliation_v2"><sup>3 </sup>Peking University</h1>
+                    <h1 class="nerf_affiliation_v2"><sup>2 </sup>BUPT</h1>,
+                    <h1 class="nerf_affiliation_v2"><sup>3 </sup>Tsinghua University</h1>,
+                    <h1 class="nerf_affiliation_v2"><sup>4 </sup>Peking University</h1>
+                </div>
+                <div>
+                <span class="nerf_affiliation_v2">* Equal contribution</span>
                 </div>
 
                 <div class="external-link">
@@ -74,10 +78,10 @@
                         <i class="ai ai-arxiv"></i> Arxiv </a>
                     <a class="btn" href="paper/neet_to_change.pdf" role="button" target="_blank">
                         <i class="fa fa-file-pdf"></i> Paper </a>
-                    <a class="btn" href="https://mabaorui.github.io/" role="button" target="_blank" disabled>
+                    <a class="btn" href="https://github.com/baaivision/GeoDream/" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-github"></i> Code </a>
-                    <a class="btn btn-large btn-light" href="https://mabaorui.github.io/" role="button" target="_blank" disabled>
-                        <i class="fa-brands fa-youtube"></i> Video </a>
+                    <!-- <a class="btn btn-large btn-light" href="https://mabaorui.github.io/" role="button" target="_blank" disabled>
+                        <i class="fa-brands fa-youtube"></i> Video </a> -->
                 </div>
 
             </div>
@@ -126,13 +130,13 @@
     <!-- DMTet-based Generated Results -->
     <div class="white_section_nerf  w-container">
         <h2 class="grey-heading_nerf">Rendered Images from Generated Results</h2>
-        <div class="grid-container-3">
-            <div>
+        <div class="grid-container-2">
+            <!-- <div>
                 <p class="myprompt nerf_text">An astronaut riding a horse</p>
                 <video class="video" id="1" loop playsinline autoPlay muted
                 src="assets/videos/DMTet_low/27_An_astronaut_riding_a_horse.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="1_merge"></canvas>
-            </div>
+            </div> -->
             <div>
                 <p class="myprompt nerf_text">3D stylized game little building</p>
                 <video class="video" id="3" loop playsinline autoPlay muted
@@ -151,12 +155,12 @@
                 src="assets/videos/DMTet_low/2_A_dinosaur_toy.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="0_merge"></canvas>
             </div> -->
-            <div>
+            <!-- <div>
                 <p class="myprompt nerf_text">A kangaroo wearing boxing gloves</p>
                 <video class="video" id="5" loop playsinline autoPlay muted
                 src="assets/videos/DMTet_low/4_A_kangaroo_wearing_boxing_gloves.mp4" onplay="resizeAndPlay(this)"></video>
                 <canvas class="videoMerge" id="5_merge"></canvas>
-            </div>
+            </div> -->
             <div>
                 <p class="myprompt nerf_text">A flamingo standing on one leg</p>
                 <video class="video" id="7" loop playsinline autoPlay muted
@@ -179,7 +183,7 @@
         <!-- Todo more res -->
         <div class="grid-container-1">
             <a class="mybtn" href="nerf-based-gallery_0.html" role="button">
-             More Results </a>
+             More Results (Coming Soon) </a>
         </div>
     </div>
 
@@ -202,7 +206,7 @@
                 </model-viewer>
             </div>
             <div>
-                <p class="myprompt nerf_text">Wes Anderson style Red Panda, reading a book,super cute, highly detailed and colored</p>
+                <p class="myprompt nerf_text">Wes Anderson style Red Panda, reading a book,super cute</p>
                 <model-viewer src="assets/meshes/panda.glb" poster="assets/meshes/astronaut.jpg" 
                     style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" 
                     camera-controls touch-action="pan-y">
@@ -247,26 +251,41 @@
         <!-- Todo more res -->
         <div class="grid-container-1">
             <a class="mybtn" href="dmtet-based-gallery_0.html" role="button">
-            More Results </a>
+            More Results (Coming Soon)</a>
         </div>
     </div>
 
-    
+    <!-- Videos -->
+
+    <div class="white_section_nerf  w-container">
+        <h2 class="grey-heading_nerf">Applications and Mesh Animations</h2>
+        <div class="grid-container-2">
+            <video muted autoplay controls loop width="800" height="400" class="center"> 
+                <source src="assets/videos/ball-v2.mp4" type="video/mp4"> 
+            </video>
+            <video muted autoplay controls loop width="800" height="400" class="center"> 
+                <source src="assets/videos/horse.mp4" type="video/mp4"> 
+            </video>
+        </div>
+    </div>
+
 
     <!-- Method Overview -->
-    <!-- <div class="white_section_nerf  w-container">
+    <div class="white_section_nerf  w-container">
         <h2 class="grey-heading_nerf">Method Overview</h2>
         <div class="grid-container-1">
             <img src="assets/images/overview_pipelines-1.png">
 
-            <p>Need to moditied!!! We fine-tune the 2D diffusion model (middle) to generate viewpoint-
-    conditioned canonical coordinates maps, which are rendered from canonically oriented 3D assets
-    (left), thereby aligning the geometric priors in the 2D diffusion. The aligned geometric priors can
-    then be seamlessly integrated into existing text-to-3D pipelines to confer 3D consistency (right),
-    while retaining their generalizability to obtain high-fidelity and highly varied 3D content.
+            <p>We focus on generating 3D content with consistently accurate geometry and delicate visual detail, 
+                by equipping 2D diffusion priors with the capability to produce 3D consistent geometry while retaining their generalizability. 
+                GeoDream consists of the following two stages. 
+                i) Following MVS-based methods, given multi-view images predicted by multi-view diffusion models, we construct cost volume as native 3D geometric priors within 2 minutes.
+                ii) During priors refinement, we show that geometric priors can be further fine-tuned to boost rendering quality and geometric 
+                accuracy by combining a 2D diffusion model. We justify that disentangling 3D and 2D priors is a potentially exciting direction 
+                for maintaining both the generalization of 2D diffusion priors and the consistency of 3D priors.
             </p>
         </div>
-    </div> -->
+    </div>
 
     <!-- BibTeX -->
     <div class="white_section_nerf grey_container w-container">
@@ -274,7 +293,7 @@
     <div class="bibtex">
         <pre><code>@inproceedings{Ma2023GeoDream,
     title = {GeoDream: Disentangling 2D and Geometric Priors for High-Fidelity and Consistent 3D Generation},
-    author = {Baorui Ma and Junsheng Zhou and Yu-Shen Liu and Tiejun Huang and Xinlong Wang},
+    author = {Baorui Ma and Haoge Deng and Junsheng Zhou and Yu-Shen Liu and Tiejun Huang and Xinlong Wang},
     journal={arXiv preprint arXiv:2310.06773},
     year={2023}
     }</code></pre>
