--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <a href="https://junshengzhou.github.io/" target="_blank" class="nerf_authors_v2">Junsheng Zhou<span
                             class="text-span_nerf"></span></a><sup>3,1</sup>,&nbsp;&nbsp;
                     <a href="https://yushen-liu.github.io/" target="_blank" class="nerf_authors_v2">Yu-Shen Liu<span
-                            class="text-span_nerf"></span></a><sup> 3</sup>
+                            class="text-span_nerf"></span></a><sup> 3</sup>,&nbsp;&nbsp;
                     <a href="https://scholar.google.com/citations?user=knvEK4AAAAAJ&hl=en/" target="_blank" class="nerf_authors_v2">Tiejun Huang<span
-                        class="text-span_nerf"></span></a><sup>1,4</sup>
+                        class="text-span_nerf"></span></a><sup>1,4</sup>,&nbsp;&nbsp;
                     <a href="https://www.xloong.wang/" target="_blank" class="nerf_authors_v2">Xinlong Wang<span
                         class="text-span_nerf"></span></a><sup> 1</sup>
                 </div>
