--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 </div>
 
                 <div class="external-link">
-                    <a class="btn" href="https://mabaorui.github.io/" role="button" target="_blank">
+                    <a class="btn" href="https://arxiv.org/abs/2311.17971/" role="button" target="_blank">
                         <i class="ai ai-arxiv"></i> Arxiv </a>
-                    <a class="btn" href="paper/neet_to_change.pdf" role="button" target="_blank">
+                    <a class="btn" href="assets/paper/geodream.pdf" role="button" target="_blank">
                         <i class="fa fa-file-pdf"></i> Paper </a>
                     <a class="btn" href="https://github.com/baaivision/GeoDream/" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-github"></i> Code </a>
@@ -294,7 +294,7 @@
         <pre><code>@inproceedings{Ma2023GeoDream,
     title = {GeoDream: Disentangling 2D and Geometric Priors for High-Fidelity and Consistent 3D Generation},
     author = {Baorui Ma and Haoge Deng and Junsheng Zhou and Yu-Shen Liu and Tiejun Huang and Xinlong Wang},
-    journal={arXiv preprint arXiv:2310.06773},
+    journal={arXiv preprint arXiv:2311.17971},
     year={2023}
     }</code></pre>
     </div>
