--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="external-link">
                     <a class="btn" href="https://arxiv.org/abs/2311.17971/" role="button" target="_blank">
                         <i class="ai ai-arxiv"></i> Arxiv </a>
-                    <a class="btn" href="assets/paper/geodream.pdf" role="button" target="_blank">
+                    <a class="btn" href="assets/paper/2311.17971.pdf" role="button" target="_blank">
                         <i class="fa fa-file-pdf"></i> Paper </a>
                     <a class="btn" href="https://github.com/baaivision/GeoDream/" role="button" target="_blank" disabled>
                         <i class="fa-brands fa-github"></i> Code </a>
